--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
 
     <!-- JS / Angular -->
     <script src="../bower_components/jquery/src/jquery.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.4/angular.min.js"></script><!-- load angular 1.2.4 -->
-    <script src="js/main-controller.js"></script>
-    <script src="js/http-service.js"></script>
+    <script data-require="angular.js@1.2.0-rc2" src="http://code.angularjs.org/1.2.0-rc.2/angular.js"></script>
+    <script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
     <script src="js/core.js"></script>
+
 </head>
 
-<body ng-controller="mainController">
+<body ng-controller="mainCtrl">
 <!--[if lt IE 10]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
@@ -39,10 +39,10 @@
 
     <!-- Map and Post Form -->
     <div class="row marketing">
-        <div class="col-lg-7">
+        <div class="col-md-7">
             <div id ="mapid-af87fea7-9e57-492b-bfbe-c17e6aba01bb"></div>
         </div>
-        <div class="col-lg-5">
+        <div class="col-md-5">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h2 class="panel-title text-center">Join the Scotch Team!</h2>
@@ -56,8 +56,7 @@
                         </div>
                         <div class="form-group">
                             <label for="location">Location (Lat, Long)</label>
-                            <input type="text" class="form-control" id="location" placeholder="29.74,-95.55" ng-model="formData.location">
-                            <button type="submit" class="btn btn-info btn-xs pull-right " onclick="getLocation()">Get Coordinates</button>
+                            <input type="text" class="form-control" id="location" ng-model="formData.location" readonly>
                         </div>
 
                         <label class="radio control-label">Gender</label>
@@ -97,7 +96,7 @@
 
     <div class="row marketing">
         <!-- Filter Form -->
-        <div class="col-lg-12">
+        <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h2 class="panel-title text-center">Find Other Scotchers!</h2>
@@ -122,7 +121,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        <p><span class="glyphicon glyphicon-check"></span> Created by Ahmed Haque for Scotch IO</p>
+        <p class="text-center"><span class="glyphicon glyphicon-check"></span> Created by Ahmed Haque for Scotch IO</p>
     </div>
 </div>
 
