--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,11 @@
     <!-- Map and Post Form -->
     <div class="row marketing">
         <div class="col-md-7">
+<!--
             <div id ="mapid-af87fea7-9e57-492b-bfbe-c17e6aba01bb"></div>
+-->
+            <div id="map"></div>
+
         </div>
         <div class="col-md-5">
             <div class="panel panel-default">
@@ -118,6 +122,11 @@
             <hr/>
         </div>
     </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <p>blah</p>
+        </div>
+    </div>
 
     <!-- Footer -->
     <div class="footer">
@@ -148,6 +157,27 @@
 <!-- Google Maps -->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1nRqQ4CO_Bi8opqLGzuiCvJ6vk4_K91Y&sensor=false"></script>
 <script type="text/javascript" src="http://www.map-generator.org/map/iframejs/af87fea7-9e57-492b-bfbe-c17e6aba01bb?key=AIzaSyA1nRqQ4CO_Bi8opqLGzuiCvJ6vk4_K91Y&width=500px&height=500px"></script>
+
+<!-- Google Maps Real -->
+<script>
+
+    function initMap() {
+        var myLatLng = {lat: 29.737, lng: -95.546};
+
+        var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 5,
+            center: myLatLng
+        });
+
+        var marker = new google.maps.Marker({
+            position: myLatLng,
+            map: map,
+            title: 'Hello World!'
+        });
+    }
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrn605l7RPadiwdzsOlRw9O28lxfYBJ6s&callback=initMap"
+        async defer></script>
 </body>
 
 </html>
