Included table at bottom with proximity reference.

--- a/public/index.html
+++ b/public/index.html
@@ -113,8 +113,47 @@
                             <label for="distanceaway">Distance Away (Miles)</label>
                             <input type="number" class="form-control" id="distanceaway" placeholder="5">
                         </div>
-                        <button type="submit" class="btn btn-primary btn-block">Filter Results</button>
+                        <button type="submit" class="btn btn-primary pull-left">Filter Results</button>
                     </form>
+                </div>
+            </div>
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h2 class="panel-title text-center">Nearest Scotchers</h2>
+                </div>
+                <div class="panel-body">
+                    <table class="table">
+                        <tr>
+                            <th class="tg-031e">Username</th>
+                            <th class="tg-031e">Distance (mi)</th>
+                            <th class="tg-031e">Favorite Language</th>
+                        </tr>
+                        <tr>
+                            <td class="tg-031e">afhaque</td>
+                            <td class="tg-031e">5 </td>
+                            <td class="tg-031e">Fortran</td>
+                        </tr>
+                        <tr>
+                            <td class="tg-031e">stoppa</td>
+                            <td class="tg-031e">10</td>
+                            <td class="tg-031e">C++</td>
+                        </tr>
+                        <tr>
+                            <td class="tg-031e">etrain</td>
+                            <td class="tg-031e">20</td>
+                            <td class="tg-031e">Java</td>
+                        </tr>
+                        <tr>
+                            <td class="tg-031e">faavc</td>
+                            <td class="tg-031e">25</td>
+                            <td class="tg-031e">.NET</td>
+                        </tr>
+                        <tr>
+                            <td class="tg-031e">Pear</td>
+                            <td class="tg-031e">33</td>
+                            <td class="tg-031e">Javascript</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
             <hr/>
