--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,8 @@
     <script src="../bower_components/angular/angular.js"></script>
     <script src="../bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/addCtrl.js"></script>
     <script src="js/gservice.js"></script>
-
+    <script src="js/addCtrl.js"></script>
 </head>
 
 <body ng-controller="addCtrl">
@@ -170,7 +169,7 @@
 
     <!-- Footer -->
     <div class="footer">
-        <p class="text-center"><span class="glyphicon glyphicon-check"></span> Created by Ahmed Haque for Scotch IO</p>
+        <p class="text-center"><span class="glyphicon glyphicon-check"></span> Created by Ahmed Haque for Scotch IO {{blah}}</p>
     </div>
 </div>
 
