Added working filter logic (including distance).

--- a/public/index3.html
+++ b/public/index3.html
@@ -61,7 +61,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="distanceaway">Max. Distance (mi)</span></label>
+                            <label for="distanceaway">Max. Distance (miles)</span></label>
                             <input type="text" class="form-control" id="distanceaway" placeholder="5">
                         </div>
 
@@ -72,8 +72,8 @@
                                 Male
                             </label>
                             <label class="checkbox-inline">
-                                <input type="checkbox" name="optionsRadios" id="radiomale" value="Female">
-                                Male
+                                <input type="checkbox" name="optionsRadios" id="radiofemale" value="Female">
+                                Female
                             </label>
                             <label class="checkbox-inline">
                                 <input type="checkbox" name="optionsRadios" id="radioother" value="What's it to ya?">
@@ -125,9 +125,6 @@
 
 <!-- Other Scripts -->
 <script src="../bower_components/holderjs/holder.js"></script>
-
-<!-- Google Maps Real -->
-<script src="js/googlemap.js"></script>
 
 </body>
 </html>
