Added skeleton code for running the queries.

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     <script src="js/app.js"></script>
     <script src="js/gservice.js"></script>
     <script src="js/addCtrl.js"></script>
+    <script src="js/queryCtrl.js"></script>
 </head>
 
 <body ng-controller="addCtrl">
